--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -734,13 +734,13 @@
 
     },
     "TOPIC_MILESTONES": {
-      "CREATE_A_MILESTONE": "@:VIEWS.TOPICS_TOPICID.ADD_MILESTONES_CREATE_A_MILESTONE",
+      "CREATE_A_MILESTONE": "Updates",
       "OPT_EDIT_DETAILS": "Edit details",
       "OPT_REMOVE_MILESTONE": "Remove update",
       "PLACEHOLDER_SUBJECT": "@:VIEWS.TOPICS_TOPICID.ADD_MILESTONES_PLACEHOLDER_SUBJECT",
       "HEADING_MILESTONE_CONTENT": "Content of the update",
       "ADD_MILESTONE": "@:VIEWS.TOPICS_TOPICID.ADD_MILESTONES_ADD_MILESTONE",
-      "HEADING_MILESTONE": "Update",
+      "HEADING_MILESTONE": "@:VIEWS.TOPICS_TOPICID.ADD_MILESTONES_CREATE_A_MILESTONE",
       "HEADING_MILESTONE_TITLE": "Title of the update",
       "MILESTONE_TITLE": "@:VIEWS.TOPICS_TOPICID.ADD_MILESTONES_MILESTONE"
     },
