--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2939,6 +2939,23 @@
   "ACTIVITY_FEED": {
     "ACTIVITY_USER_CREATE_IDEATION_TOPIC": "User <em>{{userName}}</em> has opened ideation for topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_UPDATE_IDEATION_TOPIC": "User <em>{{userName}}</em> has updated the ideation deadline of topic <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_CREATE_IDEA_IDEATION": "User <em>{{userName}}</em> has added a new idea to the ideation in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_DELETE_IDEA_IDEATION": "User <em>{{userName}}</em> has removed their idea in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_CREATE_IDEAVOTE_IDEA": "User <em>{{userName}}</em> has upvoted idea in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_DELETE_IDEAVOTE_IDEA": "User <em>{{userName}}</em> has removed their vote for an idea in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_ADD_REPORT_IDEA": "User <em>{{userName}}</em> has reported an idea!",
+    "ACTIVITY_USER_UPDATE_IDEA": "User <em>{{userName}}</em> has updated their idea in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_CREATE_COMMENT_IDEA": "User <em>{{userName}}</em> has added a new reply to an idea in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_DELETE_COMMENT_IDEA": "User <em>{{userName}}</em> has removed their reply to an idea in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_UPDATE_COMMENT_IDEA": "User <em>{{userName}}</em> has updated their reply to an idea in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_MODERATOR_UPDATE_IDEA": "User <em>{{userName}}</em> (moderator) has updated the idea field <em>{{fieldName}}</em> in topic <em>{{topicTitle}}</em>",
+    "ACTIVITY_MODERATOR_DELETE_IDEA": "User <em>{{userName}}</em> (moderator) has deleted an idea for topic <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_ADD_REPORT_IDEA_COMMENT": "User <em>{{userName}}</em> has reported a reply for idea: ",
+    "ACTIVITY_MODERATOR_UPDATE_COMMENT_IDEA": "User <em>{{userName}}</em> (moderator) has updated the idea reply field <em>{{fieldName}}</em> in topic <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_CREATE_FOLDER_IDEATION": "User <em>{{userName}}</em> has added a folder to ideation in topic <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_UPDATE_FOLDER": "User <em>{{userName}}</em> has updated a folder in topic <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_DELETE_FOLDER": "User <em>{{userName}}</em> has removed a folder from topic <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_ADD_FOLDERIDEA_FOLDER": "User <em>{{userName}}</em> has added an idea to a folder in topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_CREATE_TOPIC": "User <em>{{userName}}</em> has created a topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_UPDATE_TOPIC": "User <em>{{userName}}</em> has updated a field <em>{{fieldName}}</em> in topic <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_UPDATE_TOPIC_ACTIVITYGROUP": "User <em>{{userName}}</em> and <em>{{groupCount}}</em> others have updated topic <em>{{topicTitle}}</em>",
@@ -3032,6 +3049,21 @@
     "ACTIVITY_USER_UPDATE_COMMENTVOTE_COMMENT_REMOVE": "User <em>{{userName}}</em> has removed their reaction on an argument in topic: <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_UPDATE_COMMENTVOTE_COMMENT_REMOVE_ACTIVITYGROUP": "User <em>{{userName}}</em> and <em>{{groupCount}}</em> others have removed their reactions on an argument in topic: <em>{{topicTitle}}</em>",
     "ACTIVITY_USER_UPDATE_COMMENTVOTE_COMMENT_REMOVE_USERACTIVITYGROUP": "User <em>{{userName}}</em> has removed <em>{{groupCount}}</em> reactions on an argument in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_CREATE_COMMENTVOTE_IDEA_UP": "User <em>{{userName}}</em> has left a reaction <em>{{reaction}}</em> on a reply for an idea in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_CREATE_COMMENTVOTE_IDEA_UP_ACTIVITYGROUP": "User <em>{{userName}}</em> and <em>{{groupCount}}</em> others have left a reaction <em>{{reaction}}</em> on a reply for an idea in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_CREATE_COMMENTVOTE_IDEA_UP_USERACTIVITYGROUP": "User <em>{{userName}}</em> has left <em>{{groupCount}}</em> reactions <em>{{reaction}}</em> on a reply for an idea in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_UP": "User <em>{{userName}}</em> has updated their reaction on a reply for an idea in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_UP_ACTIVITYGROUP": "User <em>{{userName}}</em> and <em>{{groupCount}}</em> others have updated their reactions on a reply for an idea in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_UP_USERACTIVITYGROUP": "User <em>{{userName}}</em> has updated <em>{{groupCount}}</em> reactions on a reply for an idea in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_CREATE_COMMENTVOTE_IDEA_DOWN": "@:ACTIVITY_FEED.ACTIVITY_USER_CREATE_COMMENTVOTE_IDEA_UP",
+    "ACTIVITY_USER_CREATE_COMMENTVOTE_IDEA_DOWN_ACTIVITYGROUP": "@:ACTIVITY_FEED.ACTIVITY_USER_CREATE_COMMENTVOTE_IDEA_UP_ACTIVITYGROUP",
+    "ACTIVITY_USER_CREATE_COMMENTVOTE_IDEA_DOWN_USERACTIVITYGROUP": "@:ACTIVITY_FEED.ACTIVITY_USER_CREATE_COMMENTVOTE_IDEA_UP_USERACTIVITYGROUP",
+    "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_DOWN": "@:ACTIVITY_FEED.ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_UP",
+    "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_DOWN_ACTIVITYGROUP": "@:ACTIVITY_FEED.ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_UP_ACTIVITYGROUP",
+    "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_DOWN_USERACTIVITYGROUP": "@:ACTIVITY_FEED.ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_UP_USERACTIVITYGROUP",
+    "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_REMOVE": "User <em>{{userName}}</em> has removed their reaction on a reply for an idea in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_REMOVE_ACTIVITYGROUP": "User <em>{{userName}}</em> and <em>{{groupCount}}</em> others have removed their reactions on a reply for an idea in topic: <em>{{topicTitle}}</em>",
+    "ACTIVITY_USER_UPDATE_COMMENTVOTE_IDEA_REMOVE_USERACTIVITYGROUP": "User <em>{{userName}}</em> has removed <em>{{groupCount}}</em> reactions on a reply for an idea in topic: <em>{{topicTitle}}</em>",
     "ACTIVITY_COMMENTVOTE_FIELD_VALUE_UP": "up",
     "ACTIVITY_COMMENTVOTE_FIELD_VALUE_DOWN": "down",
     "ACTIVITY_COMMENTVOTE_FIELD_VALUE_REMOVE": "remove",
@@ -3092,6 +3124,7 @@
     "ACTIVITY_GROUP_FIELD_VISIBILITY": "@:ACTIVITY_FEED.ACTIVITY_TOPIC_FIELD_VISIBILITY",
     "ACTIVITY_GROUP_FIELD_VISIBILITY_PRIVATE": "@:ACTIVITY_FEED.ACTIVITY_TOPIC_FIELD_VISIBILITY_PRIVATE",
     "ACTIVITY_GROUP_FIELD_VISIBILITY_PUBLIC": "@:ACTIVITY_FEED.ACTIVITY_TOPIC_FIELD_VISIBILITY_PUBLIC",
+    "ACTIVITY_IDEA_FIELD_DELETEDREASONTYPE": "@:ACTIVITY_FEED.ACTIVITY_COMMENT_FIELD_DELETEDREASONTYPE",
     "ACTIVITY_COMMENT_FIELD_SUBJECT": "Statement",
     "ACTIVITY_COMMENT_FIELD_TEXT": "Statement explanation",
     "ACTIVITY_COMMENT_FIELD_TYPE": "Statement type",
