--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2143,8 +2143,14 @@
       "SETTINGS_HEADING_IDEATION_QUESTION": "Ideation question",
       "SETTINGS_HEADING_IDEATION_QUESTION_DESC": "Please add a specific ideation question to bring focus for the participants.",
       "SETTINGS_IDEATION_QUESTION_PLACEHOLDER": "Question",
-      "SETTINGS_HEADING_IDEATION_DEADLINE": "@:COMPONENTS.TOPIC_VOTE_DEADLINE.LBL_OPTION_DEADLINE",
-      "SETTINGS_HEADING_IDEATION_DEADLINE_DESC": "Deadline when the idea gathering closes.",
+      "SETTINGS_HEADING_IDEATION_DEADLINE": "Ideation deadline",
+      "SETTINGS_HEADING_IDEATION_DEADLINE_DESC": "You can opt to include a deadline, which will close the ideation automatically when reached. You can always edit the deadline, or manually close the ideation at any time.",
+      "LBL_OPTION_DEADLINE": "Include ideation deadline",
+      "DEADLINE_LBL_TIME": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_LBL_TIME",
+      "DEADLINE_TIME_OPTION_24": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_TIME_OPTION_24",
+      "DEADLINE_TIME_OPTION_AM": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_TIME_OPTION_AM",
+      "DEADLINE_TIME_OPTION_PM": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_TIME_OPTION_PM",
+      "DEADLINE_LBL_TIMEZONE": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_LBL_TIMEZONE",
       "SETTINGS_IDEATION_DEADLINE_PLACEHOLDER": "Select a date",
       "PREVIEW_INFO": "<b>This is a preview of your topic!</b> You can still edit your topic at any point prior to starting a vote.",
       "BTN_IDEATION_ACTIONS": "Manage ideation",
