--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,7 +22,7 @@
   "TXT_TOPIC_STATUS_ALL": "all",
   "TXT_TOPIC_STATUS_DRAFT": "draft",
   "TXT_TOPIC_STATUS_IDEATION": "in ideation",
-  "TXT_TOPIC_STATUS_INPROGRESS": "in progress",
+  "TXT_TOPIC_STATUS_INPROGRESS": "in discussion",
   "TXT_TOPIC_STATUS_VOTING": "in voting",
   "TXT_TOPIC_STATUS_FOLLOWUP": "in follow-up",
   "TXT_TOPIC_STATUS_CLOSED": "closed",
@@ -1629,7 +1629,7 @@
     "USER_DELETE_CONFIRM_NO": "No, keep this account",
     "USER_DELETE_CONFIRM_YES": "Yes, delete this account",
     "DUPLICATE_TOPIC_CONFIRM_HEADING": "Are you sure you want to duplicate this topic?",
-    "DUPLICATE_TOPIC_CONFIRM_HEADING_DESCRIPTION": "This will create a new private topic with status \"in progress\"",
+    "DUPLICATE_TOPIC_CONFIRM_HEADING_DESCRIPTION": "This will create a new private topic with status \"in discussion\"",
     "DUPLICATE_TOPIC_CONFIRM_HEADING_WILL_BE_DUPLICATED": "This content will be duplicated:",
     "DUPLICATE_TOPIC_CONFIRM_TXT_COPY_TOPIC_CONTENT": "topic content as it is right now (including images, footnotes, comments)",
     "DUPLICATE_TOPIC_CONFIRM_TXT_COPY_ATTACHMENTS": "all attachments",
@@ -2216,7 +2216,7 @@
         "TOPICS_I_HAVE_NOT_VOTED": "Topics that need my vote",
         "TOPICS_I_CREATED": "Topics I created",
         "TOPICS_ORDERED_BY_GROUPS": "Topics ordered by groups",
-        "TOPICS_IN_PROGRESS": "Topics in progress",
+        "TOPICS_IN_PROGRESS": "Topics in discussion",
         "TOPICS_IN_VOTING": "Topics in voting",
         "TOPICS_IN_FOLLOW_UP": "Topics in follow-up",
         "TOPICS_CLOSED": "Closed topics",
@@ -2323,7 +2323,7 @@
         "TOPICS_I_HAVE_NOT_VOTED": "Topics that need my vote",
         "TOPICS_I_CREATED": "Topics I created",
         "TOPICS_ORDERED_BY_GROUPS": "Topics ordered by groups",
-        "TOPICS_IN_PROGRESS": "Topics in progress",
+        "TOPICS_IN_PROGRESS": "Topics in discussion",
         "TOPICS_IN_VOTING": "Topics in voting",
         "TOPICS_IN_FOLLOW_UP": "Topics in follow-up",
         "TOPICS_CLOSED": "Closed topics",
