--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1050,7 +1050,7 @@
       "SELECT_VOTING_SYSTEM": "Select a voting system",
       "SELECT_VOTING_SYSTEM_DESC": "The voting system defines what kind of options the participants will be able to choose from.",
       "OPTION_VOTING_IDEATION": "Choose from ideas",
-      "OPTION_VOTING_IDEATION_DESC": "Participants can choose from ideas suggested during ideation",
+      "OPTION_VOTING_IDEATION_DESC": "Participants can vote for their preferred idea(s) from the ideation phase. In the next step, you'll choose which ideas to include in the vote.",
       "OPTION_VOTING_REGULAR": "Choose Yes/No/Neutral",
       "OPTION_VOTING_REGULAR_DESC": "Participants can choose from a simple yes, no or neutral",
       "OPTION_VOTING_MULTIPLE": "Create your own custom choices",
