--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1326,6 +1326,8 @@
     "TOPIC_MEMBER_USER_DELETE_CONFIRM_TXT_ARE_YOU_SURE": "@:MODALS.GROUP_MEMBER_USER_DELETE_CONFIRM_TXT_ARE_YOU_SURE",
     "TOPIC_MEMBER_USER_DELETE_CONFIRM_NO": "@:BTN_NO",
     "TOPIC_MEMBER_USER_DELETE_CONFIRM_YES": "@:BTN_YES",
+    "TOPIC_IDEA_REACTIONS_HEADING": "Idea reactions",
+    "TOPIC_IDEA_REACTIONS_NO_REACTIONS_YET": "There are not yet any reactions",
     "TOPIC_INVITE_USER_DELETE_CONFIRM_HEADING": "Delete user invite",
     "TOPIC_INVITE_USER_DELETE_CONFIRM_TXT_ARE_YOU_SURE": "Are you sure you want to delete this user's invite?",
     "TOPIC_INVITE_USER_DELETE_CONFIRM_NO": "@:BTN_NO",
