--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -240,12 +240,12 @@
       "CONFIRM_NO": "No, keep the voting open"
     },
     "CREATE": {
-      "TITLE_DISCUSSION": "Discussion topic",
-      "DESC_DISCUSSION": "Choose this if you want to encourage a discussion before potentially moving to voting and/or follow-up. No ideation phase available.",
-      "TITLE_IDEATION": "Ideation topic",
-      "DESC_IDEATION": "Choose this if you want to gather ideas before potentially moving to discussion and/or voting and follow-up.",
-      "TITLE_VOTE": "Voting topic",
-      "DESC_VOTE": "Choose this if you want to collect people’s votes before potentially moving to follow-up. No ideation or discussion phase available.",
+      "TITLE_DISCUSSION": "Pro-con discussion",
+      "DESC_DISCUSSION": "Start with this phase if you want to discuss pros and cons before potentially moving on to voting and/or follow-up. No idea gathering available.",
+      "TITLE_IDEATION": "Idea gathering",
+      "DESC_IDEATION": "Start with this phase if you want to gather ideas before potentially moving on to pro-con discussion and/or voting and follow-up.",
+      "TITLE_VOTE": "Voting",
+      "DESC_VOTE": "Choose this phase if you want to collect people's votes before potentially moving on to follow-up. No idea gathering or pro-con discussion available.",
       "TITLE_GROUP": "Group",
       "DESC_GROUP": "Create a private or public group to invite people with common interests to access relevant topics."
     },
@@ -2801,7 +2801,7 @@
       "OPTION_REPORT_TOPIC": "Report topic",
       "OPTION_DELETE_TOPIC": "Delete topic",
       "TAB_DISCUSSION": "Discussion",
-      "TAB_IDEATION": "Ideation",
+      "TAB_IDEATION": "Ideas",
       "TAB_VOTING": "Voting",
       "BTN_READ_MORE": "Read more",
       "BTN_READ_LESS": "Read less",
@@ -2819,7 +2819,7 @@
       "SECTION_PARTICIPANTS_HEADING": "Participants",
       "SECTION_PARTICIPANTS_LNK_MANAGE": "Manage",
       "SECTION_PARTICIPANTS_BTN_SHARE": "Invite & share",
-      "STATE_ITEM_IDEATION_HEADING": "Ideation",
+      "STATE_ITEM_IDEATION_HEADING": "Idea gathering",
       "STATE_ITEM_IDEATION_STATUS_ACTIVE": "@:VIEWS.TOPICS_TOPICID.STATE_ITEM_VOTING_STATUS_ACTIVE",
       "STATE_ITEM_IDEATION_STATUS_ENDED": "@:VIEWS.TOPICS_TOPICID.STATE_ITEM_VOTING_STATUS_ENDED",
       "STATE_ITEM_IDEATION_IDEAS_COLLECTED": "Ideas collected",
