--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -227,6 +227,12 @@
         "7": "Sunday"
       }
     },
+    "CLOSE_DISCUSSION_CONFIRM": {
+      "HEADING": "End discussion",
+      "ARE_YOU_SURE": "Are you sure you want to end this discussion? It will no longer be possible for arguments to be added. You cannot undo this action.",
+      "CONFIRM_YES": "Yes, end this discussion",
+      "CONFIRM_NO": "No, keep the discussion open"
+    },
     "CLOSE_IDEATION_CONFIRM": {
       "HEADING": "End ideation",
       "ARE_YOU_SURE": "Are you sure you want to end this ideation? It will no longer be possible for ideas to be added. You cannot undo this action.",
@@ -291,6 +297,22 @@
       "BTN_EDIT_DEADLINE": "Edit vote deadline",
       "BTN_CANCEL": "Don't download results",
       "BTN_SUBMIT": "Download results"
+    },
+    "EDIT_DISCUSSION_DEADLINE": {
+      "LBL_DEADLINE": "Discussion deadline",
+      "DIALOG_HEADING": "Edit discussion deadline",
+      "DIALOG_HEADING_ADD": "Add discussion deadline",
+      "LBL_EDIT_DISCUSSION_DEADLINE": "Edit discussion deadline",
+      "LBL_EDIT_DISCUSSION_DEADLINE_DESC": "You can choose or edit the discussion deadline.",
+      "LBL_OPTION_DEADLINE": "Deadline",
+      "LBL_OPTION_DEADLINE_DESC": "When the set date is reached, the discussion is closed.",
+      "DEADLINE_LBL_TIME": "Time",
+      "DEADLINE_TIME_OPTION_24": "24h clock",
+      "DEADLINE_TIME_OPTION_AM": "AM",
+      "DEADLINE_TIME_OPTION_PM": "PM",
+      "DEADLINE_LBL_TIMEZONE": "Timezone",
+      "LNK_CANCEL": "@:LNK_CANCEL",
+      "BTN_SAVE": "@:DIRECTIVES.COS_MODAL.BTN_SAVE"
     },
     "EDIT_IDEATION_DEADLINE": {
       "LBL_DEADLINE": "Ideation deadline",
@@ -696,6 +718,7 @@
     },
     "TOPIC_IDEATION": {
       "TAB_IDEAS": "Ideas: {{count}}",
+      "LBL_DEADLINE": "Ideation phase deadline",
       "TAB_FOLDERS": "Folders: {{count}}",
       "BTN_ADD_IDEAS_TO_FOLDER": "Add ideas to folder",
       "BTN_ADD_YOUR_IDEA": "Add your idea",
@@ -913,7 +936,8 @@
       "DIALOG_TAB_INTRODUCTION_ITEM_6": "You can still add a voting system and follow-up updates",
       "DIALOG_TAB_INTRODUCTION_INFO": "This is the next stage of your topic. You can now discuss the collected ideas, before moving on to voting or follow-up.",
       "LNK_CANCEL": "@:LNK_CANCEL",
-      "BTN_START_DISCUSSION": "Start topic discussion"
+      "BTN_CONTINUE":"Continue",
+      "BTN_START_DISCUSSION": "Start discussion phase"
     },
     "TOPIC_INVITE": {
       "HEADING": "Invite people to the topic",
@@ -1175,6 +1199,12 @@
     },
     "TOPIC_ARGUMENTS": {
       "TITLE": "Contributions: {{count}}",
+      "LBL_DEADLINE": "Discussion phase deadline",
+      "BTN_DISCUSSION_ACTIONS": "Manage",
+      "OPT_ADD_DEADLINE": "@:COMPONENTS.TOPIC_VOTE_CAST.OPT_ADD_DEADLINE",
+      "OPT_EDIT_DEADLINE": "@:MODALS.TOPIC_SETTINGS_BTN_EDIT_DEADLINE",
+      "OPT_EDIT_DISCUSSION": "Edit discussion",
+      "OPT_CLOSE_DISCUSSION": "Close discussion",
       "LBL_ARGUMENTS_COUNT_PRO": "@:VIEWS.TOPICS_TOPICID.LBL_ARGUMENTS_COUNT_PRO",
       "LBL_ARGUMENTS_COUNT_CON": "@:VIEWS.TOPICS_TOPICID.LBL_ARGUMENTS_COUNT_CON",
       "LBL_ARGUMENTS_COUNT_POI": "@:VIEWS.TOPICS_TOPICID.LBL_ARGUMENTS_COUNT_POI",
@@ -2506,7 +2536,8 @@
       "HEADING": "Create a discussion topic",
       "CREATE_TAB_1": "Compose",
       "CREATE_TAB_2": "Settings",
-      "CREATE_TAB_3": "Preview",
+      "CREATE_TAB_3": "Discussion",
+      "CREATE_TAB_4": "Preview",
       "TITLE_HEADER_IMAGE": "Header image",
       "HEADER_IMAGE_BTN_CANCEL": "@:LNK_CANCEL",
       "HEADER_IMAGE_BTN_REMOVE": "Remove",
@@ -2554,6 +2585,18 @@
       "TOOLTIP_GROUP_PERMISSIONS_TITLE": "@:COMPONENTS.GROUP_ADD_TOPICS.HEADING_GROUP_PERMISSIONS",
       "TOOLTIP_GROUP_PERMISSIONS_CONTENT": "This will give all members of the group the selected level of permissions to the topic, unless you individually assign them a different permissions level from the topic's 'manage participants' section",
       "HEADING_ACTIONS": "@:COMPONENTS.GROUP_ADD_TOPICS.HEADING_ACTIONS",
+      "SETTINGS_HEADING_DISCUSSION_QUESTION": "Discussion prompt",
+      "SETTINGS_HEADING_DISCUSSION_QUESTION_DESC": "Please add a specific discussion prompt to bring focus for the participants.",
+      "SETTINGS_DISCUSSION_QUESTION_PLACEHOLDER": "Question",
+      "SETTINGS_HEADING_DISCUSSION_DEADLINE": "Discussion deadline",
+      "SETTINGS_HEADING_DISCUSSION_DEADLINE_DESC": "You can opt to include a deadline, which will close the discussion automatically when reached. You can always edit the deadline, or manually close the discussion at any time.",
+      "LBL_OPTION_DEADLINE": "Include discussion deadline",
+      "DEADLINE_LBL_TIME": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_LBL_TIME",
+      "DEADLINE_TIME_OPTION_24": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_TIME_OPTION_24",
+      "DEADLINE_TIME_OPTION_AM": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_TIME_OPTION_AM",
+      "DEADLINE_TIME_OPTION_PM": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_TIME_OPTION_PM",
+      "DEADLINE_LBL_TIMEZONE": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_LBL_TIMEZONE",
+      "SETTINGS_IDEATION_DEADLINE_PLACEHOLDER": "Select a date",
       "PREVIEW_INFO": "<b>This is a preview of your topic!</b> You can still edit your topic at any point during the discussion phase.",
       "BTN_READ_MORE": "@:VIEWS.TOPICS_TOPICID.BTN_READ_MORE",
       "BTN_READ_LESS": "@:VIEWS.TOPICS_TOPICID.BTN_READ_LESS",
