--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -439,6 +439,9 @@
       "OPTION_EDIT": "Edit idea",
       "OPTION_FAVOURITE": "@:VIEWS.TOPICS_TOPICID.OPTION_FAVOURITE",
       "OPTION_UNFAVOURITE": "@:VIEWS.TOPICS_TOPICID.OPTION_UNFAVOURITE",
+      "TOOLTIP_LIKE": "Click to show your approval for this idea",
+      "TOOLTIP_LIKE_COUNT": "{{count}} people found this idea insightful.",
+      "TOOLTIP_FAVOURITE": "Save idea to your personal favourites",
       "OPTION_VIEW_PREVIOUS_VERSIONS": "View previous versions",
       "OPTION_ADD_TO_FOLDER": "Add to folder",
       "OPTION_REPORT": "Report to admin",
