--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -320,6 +320,7 @@
       "DIALOG_HEADING_ADD": "Add idea gathering deadline",
       "LBL_EDIT_IDEATION_DEADLINE": "Edit idea gathering deadline",
       "LBL_EDIT_IDEATION_DEADLINE_DESC": "You can choose or edit the idea gathering deadline.",
+      "LBL_TIMEZONE": "All participants will see the deadline displayed correctly based on their own timezone",
       "LBL_OPTION_DEADLINE": "Deadline",
       "LBL_OPTION_DEADLINE_DESC": "When the set date is reached, the idea gathering is closed.",
       "DEADLINE_LBL_TIME": "Time",
@@ -1134,6 +1135,7 @@
       "DIALOG_HEADING_ADD": "Add voting deadline",
       "LBL_EDIT_VOTING_DEADLINE": "Edit voting deadline",
       "LBL_EDIT_VOTING_DEADLINE_DESC": "You can choose or edit the voting deadline.",
+      "LBL_TIMEZONE": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.LBL_TIMEZONE",
       "LBL_OPTION_DEADLINE": "Deadline",
       "LBL_OPTION_DEADLINE_DESC": "When the set date is reached, the voting is closed.",
       "DEADLINE_LBL_TIME": "Time",
