--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2590,8 +2590,8 @@
       "TOOLTIP_GROUP_PERMISSIONS_TITLE": "@:COMPONENTS.GROUP_ADD_TOPICS.HEADING_GROUP_PERMISSIONS",
       "TOOLTIP_GROUP_PERMISSIONS_CONTENT": "This will give all members of the group the selected level of permissions to the topic, unless you individually assign them a different permissions level from the topic's 'manage participants' section",
       "HEADING_ACTIONS": "@:COMPONENTS.GROUP_ADD_TOPICS.HEADING_ACTIONS",
-      "SETTINGS_HEADING_DISCUSSION_QUESTION": "Discussion prompt",
-      "SETTINGS_HEADING_DISCUSSION_QUESTION_DESC": "Please add a specific discussion prompt to bring focus for the participants.",
+      "SETTINGS_HEADING_DISCUSSION_QUESTION": "Discussion question",
+      "SETTINGS_HEADING_DISCUSSION_QUESTION_DESC": "Please add a specific discussion question to bring focus for the participants.",
       "SETTINGS_DISCUSSION_QUESTION_PLACEHOLDER": "Question",
       "SETTINGS_HEADING_DISCUSSION_DEADLINE": "Discussion deadline",
       "SETTINGS_HEADING_DISCUSSION_DEADLINE_DESC": "You can opt to include a deadline, which will close the discussion automatically when reached. You can always edit the deadline, or manually close the discussion at any time.",
