--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2868,7 +2868,7 @@
       "SECTION_PARTICIPANTS_LNK_MANAGE": "Manage",
       "SECTION_PARTICIPANTS_BTN_SHARE": "Invite & share",
       "SECTION_NOTIFICATIONS_HEADING": "Notifications",
-      "SECTION_NOTIFICATIONS_DESC": "You’re receiving the standard notifications for this topic. Turn on additional notifications to stay engaged and up to date.",
+      "SECTION_NOTIFICATIONS_DESC": "Turn on all notifications to stay engaged and up to date with this topic's activity.",
       "SECTION_NOTIFICATIONS_BTN": "Manage notifications",
       "STATE_ITEM_IDEATION_HEADING": "Idea gathering",
       "STATE_ITEM_IDEATION_STATUS_ACTIVE": "@:VIEWS.TOPICS_TOPICID.STATE_ITEM_VOTING_STATUS_ACTIVE",
