--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -2911,8 +2911,8 @@
       "NO_FOLLOW_UP_HEADING": "There is no action phase yet",
       "NO_FOLLOW_BTN_ADD": "Add an action phase",
       "NO_FOLLOW_DESC_HEADING": "How the action phase works",
-      "NO_FOLLOW_DESC_BEFORE": "Action is the last phase of a topic. After a decision has been made, topic admins can post updates for participants about the actions taken.",
-      "NO_FOLLOW_DESC_AFTER": "Updates should show what's happened as a result of the decision, with details of any progress or outcomes.",
+      "NO_FOLLOW_DESC_BEFORE": "Action is the last phase of a topic. After a decision has been made, topic admins can post plans and updates about what has and will happen as a result ",
+      "NO_FOLLOW_DESC_AFTER": "This allows everyone to see the results of the decision, and follow its progress as it goes along.",
       "TUTORIAL_HEADING": "@:COMPONENTS.TOUR.HEADING_TOPIC",
       "TUTORIAL_TITLE": "Welcome to topics",
       "TUTORIAL_DESC": "New to the platform? Or first time since the redesign? We’d love to guide you through how topics work.",
