--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -305,13 +305,13 @@
       "DIALOG_HEADING_ADD": "Add discussion deadline",
       "LBL_EDIT_DISCUSSION_DEADLINE": "Edit discussion deadline",
       "LBL_EDIT_DISCUSSION_DEADLINE_DESC": "You can choose or edit the discussion deadline.",
-      "LBL_OPTION_DEADLINE": "Deadline",
+      "LBL_OPTION_DEADLINE": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.LBL_OPTION_DEADLINE",
       "LBL_OPTION_DEADLINE_DESC": "When the set date is reached, the discussion is closed.",
-      "DEADLINE_LBL_TIME": "Time",
-      "DEADLINE_TIME_OPTION_24": "24h clock",
-      "DEADLINE_TIME_OPTION_AM": "AM",
-      "DEADLINE_TIME_OPTION_PM": "PM",
-      "DEADLINE_LBL_TIMEZONE": "Timezone",
+      "DEADLINE_LBL_TIME": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_LBL_TIME",
+      "DEADLINE_TIME_OPTION_24": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_TIME_OPTION_24",
+      "DEADLINE_TIME_OPTION_AM": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_TIME_OPTION_AM",
+      "DEADLINE_TIME_OPTION_PM": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_TIME_OPTION_PM",
+      "LBL_TIMEZONE": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.LBL_TIMEZONE",
       "LNK_CANCEL": "@:LNK_CANCEL",
       "BTN_SAVE": "@:DIRECTIVES.COS_MODAL.BTN_SAVE"
     },
@@ -1114,6 +1114,7 @@
       "LBL_CHOOSE_VOTING_END_DESC": "You can choose either a deadline or vote amount, or combine them. When you combine them, the first that is reached will end voting.",
       "LBL_OPTION_DEADLINE": "Include voting deadline",
       "LBL_OPTION_DEADLINE_DESC": "When the set date is reached, the voting is closed.",
+      "LBL_TIMEZONE":"@:COMPONENTS.EDIT_IDEATION_DEADLINE.LBL_TIMEZONE",
       "DEADLINE_LBL_TIME": "Time",
       "DEADLINE_TIME_OPTION_24": "24h clock",
       "DEADLINE_TIME_OPTION_AM": "AM",
@@ -2187,6 +2188,7 @@
       "SETTINGS_HEADING_IDEATION_DEADLINE": "Idea gathering deadline",
       "SETTINGS_HEADING_IDEATION_DEADLINE_DESC": "You can opt to include a deadline, which will close the idea gathering automatically when reached. You can always edit the deadline, or manually close the idea gathering at any time.",
       "LBL_OPTION_DEADLINE": "Include idea gathering deadline",
+      "LBL_TIMEZONE": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.LBL_TIMEZONE",
       "DEADLINE_LBL_TIME": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_LBL_TIME",
       "DEADLINE_TIME_OPTION_24": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_TIME_OPTION_24",
       "DEADLINE_TIME_OPTION_AM": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_TIME_OPTION_AM",
@@ -2599,6 +2601,7 @@
       "SETTINGS_HEADING_DISCUSSION_DEADLINE": "Discussion deadline",
       "SETTINGS_HEADING_DISCUSSION_DEADLINE_DESC": "You can opt to include a deadline, which will close the discussion automatically when reached. You can always edit the deadline, or manually close the discussion at any time.",
       "LBL_OPTION_DEADLINE": "Include discussion deadline",
+      "LBL_TIMEZONE":"@:COMPONENTS.EDIT_IDEATION_DEADLINE.LBL_TIMEZONE",
       "DEADLINE_LBL_TIME": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_LBL_TIME",
       "DEADLINE_TIME_OPTION_24": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_TIME_OPTION_24",
       "DEADLINE_TIME_OPTION_AM": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_TIME_OPTION_AM",
