--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -306,7 +306,7 @@
       "LBL_EDIT_DISCUSSION_DEADLINE": "Edit discussion deadline",
       "LBL_EDIT_DISCUSSION_DEADLINE_DESC": "You can choose or edit the discussion deadline.",
       "LBL_OPTION_DEADLINE": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.LBL_OPTION_DEADLINE",
-      "LBL_OPTION_DEADLINE_DESC": "The deadline indicates to participants by when they should contribute.",
+      "LBL_OPTION_DEADLINE_DESC": "When the set date is reached, the discussion is closed.",
       "DEADLINE_LBL_TIME": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_LBL_TIME",
       "DEADLINE_TIME_OPTION_24": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_TIME_OPTION_24",
       "DEADLINE_TIME_OPTION_AM": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_TIME_OPTION_AM",
@@ -2600,7 +2600,7 @@
       "SETTINGS_HEADING_DISCUSSION_QUESTION_DESC": "Please add a specific discussion question to bring focus for the participants.",
       "SETTINGS_DISCUSSION_QUESTION_PLACEHOLDER": "Question",
       "SETTINGS_HEADING_DISCUSSION_DEADLINE": "Discussion deadline",
-      "SETTINGS_HEADING_DISCUSSION_DEADLINE_DESC": "You can opt to include a deadline, to let participants know by when they should submit their contributions. You can always edit the deadline at any time.",
+      "SETTINGS_HEADING_DISCUSSION_DEADLINE_DESC": "You can opt to include a deadline, which will close the discussion automatically when reached. You can always edit the deadline, or manually close the discussion at any time.",
       "LBL_OPTION_DEADLINE": "Include discussion deadline",
       "LBL_TIMEZONE":"@:COMPONENTS.EDIT_IDEATION_DEADLINE.LBL_TIMEZONE",
       "DEADLINE_LBL_TIME": "@:COMPONENTS.EDIT_IDEATION_DEADLINE.DEADLINE_LBL_TIME",
