https://github.com/citizenos/citizenos-fe/issues/1281

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -465,7 +465,9 @@
       "OPTION_ADD_TO_FOLDER": "@:COMPONENTS.IDEABOX.OPTION_ADD_TO_FOLDER",
       "OPTION_REPORT": "@:COMPONENTS.IDEABOX.OPTION_REPORT",
       "OPTION_REMOVE": "@:COMPONENTS.IDEABOX.OPTION_REMOVE",
-      "REPLIES": "@:COMPONENTS.IDEABOX.REPLIES"
+      "REPLIES": "@:COMPONENTS.IDEABOX.REPLIES",
+      "FOLDERS": "Added to {{folders}}",
+      "FOLDERS_MORE": "+ {{count}} more"
     },
     "IDEA_REPLY_FORM": {
       "HEADING": "@:COMPONENTS.ARGUMENT_REPLY.HEADING",
