--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -443,7 +443,7 @@
       "OPTION_FAVOURITE": "@:VIEWS.TOPICS_TOPICID.OPTION_FAVOURITE",
       "OPTION_UNFAVOURITE": "@:VIEWS.TOPICS_TOPICID.OPTION_UNFAVOURITE",
       "TOOLTIP_LIKE": "Click to show your approval for this idea",
-      "TOOLTIP_LIKE_COUNT": "See who found this idea insightful",
+      "TOOLTIP_LIKE_COUNT": "See who approved of this idea",
       "TOOLTIP_FAVOURITE": "Save idea to your personal favourites",
       "OPTION_VIEW_PREVIOUS_VERSIONS": "View previous versions",
       "OPTION_ADD_TO_FOLDER": "Add to folder",
@@ -739,7 +739,7 @@
       "OPT_CLOSE_IDEATION": "End idea gathering",
       "FILTER_ALL": "@:VIEWS.MY_TOPICS.FILTER_ALL",
       "FILTER_TYPE_YOUR_IDEAS": "Your ideas",
-      "FILTER_TYPE_FAVOURITES": "Favourites",
+      "FILTER_TYPE_FAVOURITES": "Saved ideas",
       "FILTER_TYPE_MODERATED": "Moderated",
       "IDEA_FILTER_ORDER": "@:VIEWS.GROUP.TOPICS_FILTER_ORDER",
       "FILTER_ORDER_MOST_LIKED": "Most liked",
